--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  Add other social media icons as needed 
             </div> -->
         </div>
-        <img src="image/myimage.jpg" alt="Jayesh Rahinj" class="profile-photo">
+        <img src="myimage.jpg" alt="Jayesh Rahinj" class="profile-photo">
     </section>
 
     <footer>
