--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  Add other social media icons as needed 
             </div> -->
         </div>
-        <img src="myimage.jpg" alt="Jayesh Rahinj" class="profile-photo">
+        <img src="https://avatars.githubusercontent.com/u/103485215?s=400&u=c59b8bd41f8f06dd6da33147dea11e3833fa1384&v=4" alt="Jayesh Rahinj" class="profile-photo">
     </section>
 
     <footer>
