--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
             background-color: #DDC3A5; /* Tan */
             color: #201E20; /* Black-brown */
         }
+        /* Media Queries */
+@media screen and (max-width: 768px) {
+    section {
+        padding: 1em;
+    }
+
+    .profile-photo {
+        width: 200px;
+        height: 200px;
+    }
+}
+
 
         header {
             background-color: #201E20; /* Black-brown */
