--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             padding: 0;
             background-color: #DDC3A5; /* Tan */
             color: #201E20; /* Black-brown */
+            overflow-y: auto; /* Added to make the page scrollable */
         }
 
         header {
