--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </header>
 
     <section>
-        <img src="image/myimage.jpg" alt="Jayesh Rahinj" class="profile-photo">
+        <img src="https://avatars.githubusercontent.com/u/103485215?s=400&u=c59b8bd41f8f06dd6da33147dea11e3833fa1384&v=4" alt="Jayesh Rahinj" class="profile-photo">
         <div class="profile-info">
             <p id="profileText" style="color: #E0A96D;" class="paragraph1">
                 "As a fresh IT grad, I'm like software – constantly updating, occasionally buggy, but always ready to bring a smile to your face." </p>
