--- a/project.html
+++ b/project.html
@@ -27,13 +27,12 @@
             font-family: 'Arial', sans-serif;
             color: #fff; /* White */
         }
-
-        nav ul {
+ nav ul {
             list-style: none;
             padding: 0;
             margin: 0;
             display: flex;
-            justify-content: flex-end; /* Align to the right */
+            justify-content: space-around; /* Adjusted for responsiveness */
             background-color: #201E20; /* Black-brown */
             padding: 1em 0;
         }
@@ -50,10 +49,8 @@
         }
 
         nav a:hover {
-            color: #B5BFA1; /* Light Green */
-        }
-
-        .row {
+            color: #86BBD8; /* Light Teal */
+        }        .row {
             display: flex;
             flex-wrap: wrap; /* Allow the columns to wrap to the next line on smaller screens */
             justify-content: space-between;
