--- a/skills.html
+++ b/skills.html
@@ -28,22 +28,18 @@
             color: #fff; /* White */
         }
 
-        nav {
-            background-color: #201E20; /* Black-brown */
-            color: #DDC3A5; /* Tan */
-            padding: 1em 0;
-            text-align: right; /* Align right */
-        }
-
-        nav ul {
+    nav ul {
+            list-style: none;
             padding: 0;
-            list-style-type: none;
+            margin: 0;
             display: flex;
-            justify-content: flex-end; /* Align items to the right */
+            justify-content: space-around; /* Adjusted for responsiveness */
+            background-color: #201E20; /* Black-brown */
+            padding: 1em 0;
         }
 
         nav li {
-            margin-left: 15px;
+            margin: 0 1em;
         }
 
         nav a {
