--- a/experience.html
+++ b/experience.html
@@ -35,15 +35,18 @@
             text-align: right; /* Align right */
         }
 
-        nav ul {
+      nav ul {
+            list-style: none;
             padding: 0;
-            list-style-type: none;
+            margin: 0;
             display: flex;
-            justify-content: flex-end; /* Align items to the right */
+            justify-content: space-around; /* Adjusted for responsiveness */
+            background-color: #201E20; /* Black-brown */
+            padding: 1em 0;
         }
 
         nav li {
-            margin-left: 15px;
+            margin: 0 1em;
         }
 
         nav a {
@@ -56,7 +59,6 @@
         nav a:hover {
             color: #86BBD8; /* Light Teal */
         }
-
         section {
             display: flex;
             justify-content: center;
