--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="experience.html">Experience</a></li>
-                <li><a href="about.html"></a></li>
+                 <li><a href="about.html">Profile</a></li>
+
             </ul>
         </nav>
     </header>
