--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
                 flex-direction: column; /* Stack items vertically on small screens */
                 text-align: center; /* Center-align content on small screens */
             }
+               nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav li {
+        margin: 0.5em 0;
+    }
 
             .profile-info {
                 margin-left: 0; /* Remove left margin for smaller screens */
