--- a/skills.html
+++ b/skills.html
@@ -6,136 +6,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jayesh Rahinj - Skills</title>
     <style>
-        body {
-            font-family: 'Verdana', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #DDC3A5; /* Tan */
-            color: #201E20; /* Dark color for text */
-        }
+      /* Default styles for larger screens */
+body {
+    font-family: 'Verdana', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #DDC3A5;
+    color: #201E20;
+}
 
-        header {
-            background-color: #201E20; /* Black-brown */
-            color: #DDC3A5; /* Tan */
-            padding: 1em;
-            text-align: center;
-        }
+header {
+    background-color: #201E20;
+    color: #DDC3A5;
+    padding: 1em;
+    text-align: center;
+}
 
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-            font-family: 'Arial', sans-serif;
-            color: #fff; /* White */
-        }
+header h1 {
+    margin: 0;
+    font-size: 2.5em;
+    font-family: 'Arial', sans-serif;
+    color: #fff;
+}
 
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+    background-color: #201E20;
+    padding: 1em 0;
+}
+
+nav li {
+    margin: 0 1em;
+}
+
+nav a {
+    text-decoration: none;
+    color: #DDC3A5;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+nav a:hover {
+    color: #86BBD8;
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2em;
+    background-color: #201E20;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin: 20px;
+    animation: slideIn 1s ease;
+}
+
+.skills-column {
+    max-width: 100%;
+    margin: 0 20px 20px 0;
+    padding: 20px;
+    background-color: #201E20;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Responsive styles for smaller screens */
+@media only screen and (max-width: 600px) {
     nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: space-around; /* Adjusted for responsiveness */
-            background-color: #201E20; /* Black-brown */
-            padding: 1em 0;
-        }
+        flex-direction: column;
+        align-items: center;
+    }
 
-        nav li {
-            margin: 0 1em;
-        }
+    nav li {
+        margin: 0.5em 0;
+    }
 
-        nav a {
-            text-decoration: none;
-            color: #DDC3A5; /* Tan */
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
+    .skills-column {
+        max-width: 100%;
+        margin: 0;
+    }
 
-        nav a:hover {
-            color: #86BBD8; /* Light Teal */
-        }
+    footer {
+        position: relative; /* Adjusted for responsiveness */
+    }
+}
 
-        section {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 2em;
-            background-color: #201E20; /* Black-brown */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin: 20px;
-            animation: slideIn 1s ease;
-        }
+footer {
+    background-color: #201E20;
+    color: #DDC3A5;
+    text-align: center;
+    padding: 1em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 
-        @keyframes slideIn {
-            from {
-                transform: translateY(-50px);
-                opacity: 0;
-            }
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .skills-column {
-            max-width: 400px;
-            margin: 0 20px 20px 0;
-            padding: 20px;
-            background-color: #201E20; /* Black-brown */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .skills-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .skills-list li {
-            margin-bottom: 10px;
-            padding: 10px;
-            background-color: #DDC3A5; /* Tan */
-            border-radius: 5px;
-            transition: transform 0.3s ease;
-        }
-
-        .skills-list:hover {
-            transform: scale(1.05);
-        }
-
-        .soft-skills {
-            max-width: 400px;
-            padding: 20px;
-            background-color: #201E20; /* Black-brown */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .soft-skills h2 {
-            margin-bottom: 10px;
-        }
-
-        .soft-skills .skills-list li {
-            padding: 10px;
-            background-color: #DDC3A5; /* Tan */
-            border-radius: 5px;
-            margin-bottom: 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .soft-skills .skills-list:hover {
-            transform: scale(1.05);
-        }
-     footer {
-            background-color: #201E20; /* Black-brown */
-            color: #DDC3A5; /* Tan */
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
     </style>
 </head>
 
