--- a/skills.html
+++ b/skills.html
@@ -6,107 +6,140 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jayesh Rahinj - Skills</title>
     <style>
-      /* Default styles for larger screens */
-body {
-    font-family: 'Verdana', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #DDC3A5;
-    color: #201E20;
-}
+        body {
+            font-family: 'Verdana', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #DDC3A5; /* Tan */
+            color: #201E20; /* Dark color for text */
+        }
 
-header {
-    background-color: #201E20;
-    color: #DDC3A5;
-    padding: 1em;
-    text-align: center;
-}
+        header {
+            background-color: #201E20; /* Black-brown */
+            color: #DDC3A5; /* Tan */
+            padding: 1em;
+            text-align: center;
+        }
 
-header h1 {
-    margin: 0;
-    font-size: 2.5em;
-    font-family: 'Arial', sans-serif;
-    color: #fff;
-}
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            font-family: 'Arial', sans-serif;
+            color: #fff; /* White */
+        }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: space-around;
-    background-color: #201E20;
-    padding: 1em 0;
-}
+        nav {
+            background-color: #201E20; /* Black-brown */
+            color: #DDC3A5; /* Tan */
+            padding: 1em 0;
+            text-align: right; /* Align right */
+        }
 
-nav li {
-    margin: 0 1em;
-}
+        nav ul {
+            padding: 0;
+            list-style-type: none;
+            display: flex;
+            justify-content: flex-end; /* Align items to the right */
+        }
 
-nav a {
-    text-decoration: none;
-    color: #DDC3A5;
-    font-weight: bold;
-    transition: color 0.3s ease;
-}
+        nav li {
+            margin-left: 15px;
+        }
 
-nav a:hover {
-    color: #86BBD8;
-}
+        nav a {
+            text-decoration: none;
+            color: #DDC3A5; /* Tan */
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
 
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 2em;
-    background-color: #201E20;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    margin: 20px;
-    animation: slideIn 1s ease;
-}
+        nav a:hover {
+            color: #86BBD8; /* Light Teal */
+        }
 
-.skills-column {
-    max-width: 100%;
-    margin: 0 20px 20px 0;
-    padding: 20px;
-    background-color: #201E20;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
+        section {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 2em;
+            background-color: #201E20; /* Black-brown */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            margin: 20px;
+            animation: slideIn 1s ease;
+        }
 
-/* Responsive styles for smaller screens */
-@media only screen and (max-width: 600px) {
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
+        @keyframes slideIn {
+            from {
+                transform: translateY(-50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
 
-    nav li {
-        margin: 0.5em 0;
-    }
+        .skills-column {
+            max-width: 400px;
+            margin: 0 20px 20px 0;
+            padding: 20px;
+            background-color: #201E20; /* Black-brown */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
 
-    .skills-column {
-        max-width: 100%;
-        margin: 0;
-    }
+        .skills-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-    footer {
-        position: relative; /* Adjusted for responsiveness */
-    }
-}
+        .skills-list li {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #DDC3A5; /* Tan */
+            border-radius: 5px;
+            transition: transform 0.3s ease;
+        }
 
-footer {
-    background-color: #201E20;
-    color: #DDC3A5;
-    text-align: center;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
+        .skills-list:hover {
+            transform: scale(1.05);
+        }
 
+        .soft-skills {
+            max-width: 400px;
+            padding: 20px;
+            background-color: #201E20; /* Black-brown */
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .soft-skills h2 {
+            margin-bottom: 10px;
+        }
+
+        .soft-skills .skills-list li {
+            padding: 10px;
+            background-color: #DDC3A5; /* Tan */
+            border-radius: 5px;
+            margin-bottom: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .soft-skills .skills-list:hover {
+            transform: scale(1.05);
+        }
+     footer {
+            background-color: #201E20; /* Black-brown */
+            color: #DDC3A5; /* Tan */
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -123,7 +156,6 @@ footer {
             <li><a href="project.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="about.html">Profile</a></li>
         </ul>
     </nav>
 
@@ -153,7 +185,7 @@ footer {
     </section>
 
     <footer>
-        <p id="profileText" style="color: #E0A96D; font-size: 20px;">&copy; 2022 Jayesh Rahinj | Contact: rahinjayesh@gmail.com</p>
+        <p>&copy; 2022 Jayesh Rahinj | Contact: rahinjayesh@gmail.com</p>
     </footer>
 </body>
 
