--- a/skills.html
+++ b/skills.html
@@ -159,6 +159,7 @@
             <li><a href="project.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="experience.html">Experience</a></li>
+             <li><a href="about.html">Profile</a></li>
         </ul>
     </nav>
 
