--- a/skills.html
+++ b/skills.html
@@ -143,6 +143,17 @@
             bottom: 0;
             width: 100%;
         }
+          @media screen and (max-width: 768px) {
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            nav li {
+                margin: 0.5em 0;
+            }
+          }
+
     </style>
 </head>
 
