--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
             nav li {
                 margin: 0.5em 0;
             }
+              footer {
+        position: relative; /* Adjusted for responsiveness */
+    }
 
             .profile-info {
                 margin-left: 0; /* Remove left margin for smaller screens */
