--- a/project.html
+++ b/project.html
@@ -140,7 +140,10 @@ nav a:hover {
                nav ul {
         flex-direction: column;
         align-items: center;
-    }
+                      } 
+            footer {
+        position: relative; /* Adjusted for responsiveness */
+                   }
 
     nav li {
         margin: 0.5em 0;
