--- a/about.html
+++ b/about.html
@@ -112,6 +112,9 @@
                 flex-direction: column;
                 align-items: center;
             }
+                footer {
+        position: relative; /* Adjusted for responsiveness */
+    }
 
             nav li {
                 margin: 0.5em 0;
