--- a/project.html
+++ b/project.html
@@ -162,7 +162,7 @@ nav a:hover {
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li><a href="project.html">Work</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="about.html">Profile</a></li>
